crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__year__single__all_periodic.snap
---
source: crates/tools/cron/src/tests/unit/year.rs
expression: result
---
Ok(
    (
        "",
        YearRule {
            kinds: [
                YearKind {
                    range: (
                        Year(
                            1970,
                        ),
                        Year(
                            2199,
                        ),
                    ),
                    periodic: YearPeriodic(
                        2,
                    ),
                },
            ],
        },
    ),
)
